--- a/packages/desktop-app/src/app/components/command-bar/command-bar.component.scss
+++ b/packages/desktop-app/src/app/components/command-bar/command-bar.component.scss
@@ -176,10 +176,61 @@
   align-items: center;
   justify-content: center;
 
+  &.mat-menu-item-style {
+    height: 36px;
+    padding: 0 20px;
+    font-size: 15px;
+    justify-content: initial;
+    position: relative;
+
+    &:hover::before {
+      content: "";
+      position: absolute;
+      top: 3px;
+      bottom: 3px;
+      left: 10px;
+      right: 10px;
+      border-radius: 5px;
+      background: rgba(0, 0, 0, 0.04);
+      cursor: pointer;
+    }
+  }
+
+  .notification-button-clickable {
+    display: flex;
+    align-items: center;
+    outline: none;
+    border: none;
+    background: transparent;
+    font-size: 15px;
+    padding: 0;
+  }
+
   span {
     display: inline-flex;
     text-align: left;
     flex-grow: 1;
     margin-left: 5px;
+  }
+
+  .notification-dot {
+    right: auto;
+    left: 28px;
+    top: 8px;
+  }
+
+  .moon-Close {
+    font-size: 18px;
+    top: 0;
+  }
+
+  .unread-text {
+    font-weight: 600;
+  }
+}
+
+::ng-deep {
+  .mat-menu-panel {
+    max-width: 320px!important;
   }
 }
