chore: added dark-theme style to survey text

--- a/packages/desktop-app/src/assets/scss/dark-theme.scss
+++ b/packages/desktop-app/src/assets/scss/dark-theme.scss
@@ -486,7 +486,7 @@ body.dark-theme {
     }
   }
   .html-content {
-    h1, h2, h3, p, ul, li {
+    h1, h2, h3, p, ul, li, div, span,  {
       color: $dark-main-text-color!important;
     }
     a {
