docs: added workspaces documentation

--- a/packages/desktop-app/src/app/components/side-bar/side-bar.component.html
+++ b/packages/desktop-app/src/app/components/side-bar/side-bar.component.html
@@ -51,6 +51,10 @@
           <span>Manage Workspaces</span>
         </div>
         <div class="divider"></div>
+        <div mat-menu-item (click)="openWorkspaceDocumentation()">
+          <img class="workspace-menu-icon" src="assets/images/book-open-text.svg" alt="settings">
+          <span>What's a workspace?</span>
+        </div>
         <div mat-menu-item (click)="showOptionDialog()">
           <img class="workspace-menu-icon" src="assets/images/gear.svg" alt="settings">
           <span>Settings...</span>
