--- a/packages/desktop-app/src/app/components/command-bar/command-bar.component.scss
+++ b/packages/desktop-app/src/app/components/command-bar/command-bar.component.scss
@@ -248,4 +248,13 @@
   .mat-menu-panel {
     max-width: 320px!important;
   }
+  .mat-menu-panel .mat-menu-content {
+    .mat-menu-item {
+      img.icon-not-menu {
+        width: 20px;
+        margin-right: 0;
+        margin-left: 0;
+      }
+    }
+  }
 }
