chore: added pre checkout dialog

--- a/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.html
+++ b/packages/desktop-app/src/app/components/dialogs/options-dialog/options-dialog.component.html
@@ -382,7 +382,7 @@
                 <span class="price-value">$10</span>
                 <span class="price-description">Billed montlhy</span>
               </div>
-              <div class="cta-button clickable" (click)="upgradeToLeappPro()">Upgrade</div>
+              <div class="cta-button clickable" (click)="openLeappProPreCheckoutDialog()">Upgrade</div>
               <ul class="plan-features">
                 <li>
                   <span class="all-free-features">All the Free features, plus</span>
