--- a/packages/desktop-app/src/app/components/dialogs/leapp-pro-pre-checkout-dialog/leapp-pro-pre-checkout-dialog.component.scss
+++ b/packages/desktop-app/src/app/components/dialogs/leapp-pro-pre-checkout-dialog/leapp-pro-pre-checkout-dialog.component.scss
@@ -1,3 +1,22 @@
+.left-side {
+  width: 60%;
+  padding-right: 20px!important;
+
+  label {
+    padding-top: 0;
+  }
+
+  .form-field {
+    display: flex;
+  }
+}
+
+.right-side {
+  border-left: 1px solid #dddddd;
+  background: #ededed;
+  width: 50%;
+}
+
 .form-group {
   display: flex;
   flex-direction: column;
@@ -21,4 +40,54 @@
   .biling-option:nth-child(2) {
     margin-left: 20px;
   }
+}
+
+.toggle-btn-stripe {
+  display: inline-flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+  width: 50%;
+  height: 40px;
+  text-align: center;
+  border: 2px solid #ddd;
+  cursor: pointer;
+  color: #9A9A9A;
+  transition: all 0.3s ease;
+  z-index: 1;
+
+  small {
+    color: #8fc92a;
+    position: relative;
+    top: 2px;
+    margin-left: 5px;
+    font-size: 12px;
+  }
+
+  &:first-child {
+    border-top-left-radius: 4px;
+    border-bottom-left-radius: 4px;
+  }
+  &:last-of-type {
+    border-top-right-radius: 4px;
+    border-bottom-right-radius: 4px;
+    left: -2px;
+  }
+  &:hover {
+    background: #eee;
+  }
+  &.selected {
+    border: 2px solid #00aaff;
+    color: #0c0c0c;
+    z-index: 2;
+    &:hover {
+      background: #52a8dc42;
+    }
+  }
+}
+
+button.disabled {
+  background: #dddddd!important;
+  color: #9A9A9A!important;
 }
